Add: Git repo info

--- a/libIinBin/libIinBin.csproj
+++ b/libIinBin/libIinBin.csproj
@@ -2,6 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+
+    <RepositoryUrl>https://github.com/Qssen/Lib-Iin-Bin.git</RepositoryUrl> 
+    <RepositoryType>git</RepositoryType> 
   </PropertyGroup>
 
 </Project>
